2004-09-26  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>

	* gobject/pygobject-private.h, gobject/pygobject.h: Make
	PyGClosure structure semi-public, for gnome-python.

2004-09-25  Johan Dahlin  <johan@gnome.org>

	* tests/test_signal.py: Move some tests from gtype and rename from
	signal.py 

2004-09-25  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>

	* tests/gtype.py (GTypeTest.testGObjectInvalidSignalOverride): New
	test with test case in #153718.

	* gobject/gobjectmodule.c (pyg_type_register):
	PyDict_GetItemString returnes a borrowed reference, therefore
	remove Py_DECREF(gsignals) and Py_DECREF(gproperties) everywhere.

	Fixes bug 153718: exception in overriden gsignals causes ref count
	problems.

2004-09-24  James Henstridge  <james@jamesh.id.au>

	* gtk/gdk.override (_wrap_gdk_color_parse): initialise the
	GdkColor struct to zeroes, so we don't get a random value in the
	"pixel" field after parsing the colour string.

2004-09-22  John Ehresman <jpe@wingide.com>

	* gtk/gdk.override: (_wrap_gdk_color_new): pass int variables
	to ParseTupleAndKeywords and then assign to GdkColor fields

2004-09-17  Johan Dahlin  <johan@gnome.org>

	* gobject/pygflags.c: Filter out 0 values

	* Makefile.am: 
	* docs/Makefile.am: Revert documentation changes

2004-08-28  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>

	* gtk/gtk.override (_wrap_gtk_bin_tp_init): override, chain to parent type.
	(_wrap_gtk_item_tp_init): idem.
	(_wrap_gtk_box_tp_init): idem.
	(_wrap_gtk_button_box_tp_init): idem.
	(_wrap_gtk_separator_tp_init): idem.
	(_wrap_gtk_separator_tp_init): idem.
	Partially fixes #150698.

2004-08-27  Xavier Ordoquy  <xordoquy@linovia.com>

	* gtk/gtk.override: raise a TypeError if an action callback
	isn't callable.

2004-08-24  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>

	* gtk/gtk.defs: Clarify the DeprecationWarning messages in
	gtk.Progress methods.
