@@ -164,11 +164,7 @@ class Wrapper:
     def get_field_accessor(self, fieldname):
         raise NotImplementedError
 
-    def get_initial_class_substdict(self):
-        return dict(tp_flags='Py_TPFLAGS_DEFAULT | Py_TPFLAGS_BASETYPE',
-                    tp_basicsize='PyObject',
-                    tp_weaklistoffset='0',
-                    tp_dictoffset='0')
+    def get_initial_class_substdict(self): return {}
 
     def get_initial_constructor_substdict(self, constructor):
         return { 'name': '%s.__init__' % self.objinfo.c_name,
@@ -179,6 +175,8 @@ class Wrapper:
     def write_class(self):
         self.fp.write('\n/* ----------- ' + self.objinfo.c_name + ' ----------- */\n\n')
         substdict = self.get_initial_class_substdict()
+        if not substdict.has_key('tp_flags'):
+            substdict['tp_flags'] = 'Py_TPFLAGS_DEFAULT | Py_TPFLAGS_BASETYPE'
         substdict['typename'] = self.objinfo.c_name
         if self.overrides.modulename:
             substdict['classname'] = '%s.%s' % (self.overrides.modulename,
@@ -192,9 +190,10 @@ class Wrapper:
             substdict['tp_init'] = self.write_constructor()
         substdict['tp_methods'] = self.write_methods()
         substdict['tp_getset'] = self.write_getsets()
-
+            
         # handle slots ...
         for slot in self.slots_list:
+            
             slotname = '%s.%s' % (self.objinfo.c_name, slot)
             slotfunc = '_wrap_%s_%s' % (self.get_lower_name(), slot)
             if slot[:6] == 'tp_as_':
@@ -532,11 +531,9 @@ class GObjectWrapper(Wrapper):
                                             '_TYPE_', '_', 1)
 
     def get_initial_class_substdict(self):
-        d = Wrapper.get_initial_class_substdict(self)
-        d.update(dict(tp_basicsize='PyGObject',
-                      tp_weaklistoffset='offsetof(PyGObject, weakreflist)',
-                      tp_dictoffset='offsetof(PyGObject, inst_dict)'))
-        return d
+        return { 'tp_basicsize'      : 'PyGObject',
+                 'tp_weaklistoffset' : 'offsetof(PyGObject, weakreflist)',
+                 'tp_dictoffset'     : 'offsetof(PyGObject, inst_dict)' }
     
     def get_field_accessor(self, fieldname):
         castmacro = string.replace(self.objinfo.typecode, '_TYPE_', '_', 1)
@@ -635,6 +632,10 @@ class GObjectWrapper(Wrapper):
 
 
 class GInterfaceWrapper(GObjectWrapper):
+    def get_initial_class_substdict(self):
+        return { 'tp_basicsize'      : 'PyObject',
+                 'tp_weaklistoffset' : '0',
+                 'tp_dictoffset'     : '0'}
 
     def write_constructor(self):
         # interfaces have no constructors ...
@@ -675,9 +676,9 @@ class GBoxedWrapper(Wrapper):
         '}\n\n'
 
     def get_initial_class_substdict(self):
-        d = Wrapper.get_initial_class_substdict(self)
-        d.update(dict(tp_basicsize='PyGBoxed'))
-        return d
+        return { 'tp_basicsize'      : 'PyGBoxed',
+                 'tp_weaklistoffset' : '0',
+                 'tp_dictoffset'     : '0' }
 
     def get_field_accessor(self, fieldname):
         return 'pyg_boxed_get(self, %s)->%s' % (self.objinfo.c_name, fieldname)
@@ -717,9 +718,9 @@ class GPointerWrapper(GBoxedWrapper):
         '}\n\n'
 
     def get_initial_class_substdict(self):
-        d = Wrapper.get_initial_class_substdict(self)
-        d.update(dict(tp_basicsize='PyGPointer'))
-        return d
+        return { 'tp_basicsize'      : 'PyGPointer',
+                 'tp_weaklistoffset' : '0',
+                 'tp_dictoffset'     : '0' }
 
     def get_field_accessor(self, fieldname):
         return 'pyg_pointer_get(self, %s)->%s' % (self.objinfo.c_name, fieldname)
