@@ -1,3 +1,10 @@
+2004-09-27  Johan Dahlin  <johan@gnome.org>
+
+	* codegen/codegen.py (FileOutput.resetline): Revert parts of
+	Gustavos changes, so the size of interfaces are correct.
+
+	* tests/test_subtype.py: tests for this.
+
 2004-09-26  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>
 
 	* gobject/pygobject-private.h, gobject/pygobject.h: Make
